<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="sale_button">Sale</string>
    <string name="new_product">Add new item</string>
    <string name="hint_email_address">supplier@gmail.com</string>
    <string name="supplier_email_title">Supplier E-mail Address</string>
    <string name="supplier_phone_hint">e.g. +91 000-000-000</string>
    <string name="supplier_phone_title">Supplier Phone</string>
    <string name="supplier_name_hint">Candy Supplier GmbH</string>
    <string name="supplier_name_title">Supplier Name</string>
    <string name="quantity_title">Quantity</string>
    <string name="price_title">Price</string>
    <string name="product_name_title">Product Name</string>
    <string name="currency_details">¥ / item</string>
    <string name="action_save">Save item</string>
    <string name="editor_activity_title_new_item">Add new item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="menu_order_item">Order more</string>
    <string name="menu_delete_item">Delete item</string>
    <string name="menu_delete_all_data">Delete all data</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="order_message">You can place an order for this item by phone or e-mail</string>
    <string name="delete_message">Are you sure you want to procede with the deletion?</string>
    <string name="delete">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list_hint">Start adding some items to your inventory</string>
    <string name="action_add_dummy_data">Add Dummy Data</string>
    <string name="select_image">Select image</string>
    <string name="image">Image</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes in the product information. Do you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="title_activity_login">Inventory</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome">Logged In</string>
    <string name="add_user">Add User</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="add_items">Add Items</string>
    <string name="new_order">New Order</string>
    <string name="view_items">View Items</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="qty">Qty</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="supplier">Supplier</string>
    <string name="item_description">item Description</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="supplier_details">Supplier Details</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="password">Password</string>
    <string name="account_number">Account Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="textview">TextView</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register1">register</string>
    <string name="search">Search</string>
    <string name="add_supplier">Add Supplier</string>
</resources>