<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ItemsList.ItemsListViewImpl">

    <item
        android:id="@+id/activity_list_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_add_dummy_data"
        android:title="@string/action_add_dummy_data"
        android:icon="@drawable/ic_cloud_download_black_24dp"
        />
    <item
        android:id="@+id/action_new_order"
        android:title="@string/new_order" />
    <item
        android:id="@+id/action_add_items"
        android:title="@string/add_items" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>